Fix up shiny overlay in symptom shark, increase contrast in log entry edit

--- a/src/components/symptom-shark/presentational/LogEntry/LogEntry.css
+++ b/src/components/symptom-shark/presentational/LogEntry/LogEntry.css
@@ -31,3 +31,8 @@
     font-size: .88em;
     white-space: pre-wrap;
 }
+
+.mdhui-ss-log-entry .mdhui-ss-log-entry-action {
+    z-index: 1;
+    position: relative;
+}
